<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="DUT_ErrorState" Id="{2803a21e-b5ef-48fc-a5fd-18043e60c6af}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE DUT_ErrorState :
(
    None,
    Active,
    Inactive,
    Acknowledged
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>