<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_ErrorSystem" Id="{7e9a851b-2b87-4b78-9f7e-1a9f1c210ec1}">
    <Declaration><![CDATA[TYPE ST_ErrorSystem :
STRUCT
    //Array of error data. Size = cSizeOfErrorData in the GVL
    aErrorData      : ARRAY [0..cSizeOfErrorData - 1] OF ST_ErrorEntry;     //Error Entry List
    nNextErrorNum   : ULINT := 1;                   //ErrorID for the next error entry
    nNoError        : UINT;                         //Number of errors in the list
    nNoActive       : UINT;                         //Number of Active errors
    nNoInactive     : UINT;                         //Number on Inactive errors
    nNoFree         : UINT;                         //Number of free entries in the list
    nNoOverflow     : INT := 0;                     //Number of overflows. How many error entries have been lost due to the size of the array
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>